Add Awards and Famous Games sections with cards and styling

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                 <li><a href="#rules" class="nav-link">Reglur</a></li>
                 <li><a href="#teams" class="nav-link">Lið</a></li>
                 <li><a href="#legends" class="nav-link">Goðsagnir</a></li>
+                <li><a href="#awards" class="nav-link">Verðlaun</a></li>
+                <li><a href="#games" class="nav-link">Leikirm</a></li>
                 <li><a href="#contact" class="nav-link">Samband</a></li>
             </ul>
             <a href="index_en.html" class="lang-switch" title="English">🇬🇧 EN</a>
@@ -208,6 +210,80 @@
                     <p class="team-description">4x NBA meistari - Ráðandi miðja NBA sögunnar</p>
                     </div>
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Awards Section -->
+    <section id="awards" class="awards">
+        <div class="container">
+            <h2>🏆 Efstu einstakar verðlaun</h2>
+            <div class="awards-grid">
+                <div class="award-card">
+                    <div class="award-icon">🎖️</div>
+                    <h3>NBA MVP</h3>
+                    <p class="award-category">Most Valuable Player</p>
+                    <p class="award-description">Verðlaunin fyrir besta leikmann NBA deildarinnar á hverju ári. Mikilvægasti einstaki verðlaunin í körfubolti.</p>
+                    <p class="award-holders">Handfararar: Michael Jordan, Wilt Chamberlain, LeBron James</p>
+                </div>
+                <div class="award-card">
+                    <div class="award-icon">🛡️</div>
+                    <h3>Defensive Player of the Year</h3>
+                    <p class="award-category">DPOY</p>
+                    <p class="award-description">Verðlaunin fyrir leikmanninn með bestu varnarleiki á árinu. Dýrðleg verðlaunin fyrir þá sem tilheyra bestu vörnum.</p>
+                    <p class="award-holders">Handfararar: Dikembe Mutombo, Dennis Rodman, Kawhi Leonard</p>
+                </div>
+                <div class="award-card">
+                    <div class="award-icon">⭐</div>
+                    <h3>All-NBA Team</h3>
+                    <p class="award-category">First, Second, Third Team</p>
+                    <p class="award-description">Verðlaunin fyrir 15 bestu leikmenn NBA á ári. Skipt í þrjú þrep miðað við afköst.</p>
+                    <p class="award-holders">Valdið af blaðamönnum og sérfræðingum</p>
+                </div>
+                <div class="award-card">
+                    <div class="award-icon">🌟</div>
+                    <h3>NBA Finals MVP</h3>
+                    <p class="award-category">Championship MVP</p>
+                    <p class="award-description">Verðlaunin fyrir besta leikmann í NBA-úrslitum. Ein stærstu persónulegu verðlaunin í körfubolti.</p>
+                    <p class="award-holders">Handfararar: Michael Jordan, LeBron James, Kobe Bryant</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Famous Games Section -->
+    <section id="games" class="famous-games">
+        <div class="container">
+            <h2>🎬 Frægstu leikir körfuboltasögunnar</h2>
+            <div class="games-grid">
+                <div class="game-card">
+                    <div class="game-date">1998. júní 14</div>
+                    <h3>NBA Finals Game 6 - Chicago Bulls vs Utah Jazz</h3>
+                    <p class="game-context">Michael Jordan's Final Shot</p>
+                    <p class="game-description">Sagnfræðilegur leikur þar sem Michael Jordan skoraði sigurmarksið á síðustu sekúndum og tryggði 6. NBA-meistaratitil Chicago Bulls. "The Shot" - ein frægasta stund körfuboltasögunnar.</p>
+                    <p class="game-stats">Niðurstaða: Bulls 87 - Jazz 86</p>
+                </div>
+                <div class="game-card">
+                    <div class="game-date">2016. júní 19</div>
+                    <h3>NBA Finals Game 7 - Golden State Warriors vs Cleveland Cavaliers</h3>
+                    <p class="game-context">LeBron James' Historic Comeback</p>
+                    <p class="game-description">Ótrúlegur leikur þar sem Warriors voru með 3-1 stigaforskot en Cavaliers komu til baka og unnu fyrsta meistaratitilinn fyrir Cleveland. LeBron James fór út úr sér með frábærum leikum.</p>
+                    <p class="game-stats">Niðurstaða: Cavaliers 93 - Warriors 89</p>
+                </div>
+                <div class="game-card">
+                    <div class="game-date">2013. júní 20</div>
+                    <h3>NBA Finals Game 6 - Miami Heat vs San Antonio Spurs</h3>
+                    <p class="game-context">Ray Allen's Three-Pointer</p>
+                    <p class="game-description">Gegn öllu erinni skipti Ray Allen um þá stelpu með 3-stig með 5 sekúndum eftir og framlengi leikins. Miami Heat unnu meistaratitilinn og voru ódrepnir í Sex markamönnum.</p>
+                    <p class="game-stats">Niðurstaða: Heat 103 - Spurs 100 (Overtime)</p>
+                </div>
+                <div class="game-card">
+                    <div class="game-date">1995. júní 20</div>
+                    <h3>NBA Finals Game 6 - Houston Rockets vs Orlando Magic</h3>
+                    <p class="game-context">Hakeem's Dominant Performance</p>
+                    <p class="game-description">Hakeem Olajuwon sýndi ótrúlegan leik með 25 stígum, 10 háetum og 3 blökkunum. Houston Rockets unnu sínum öðrum meistaratitli í röð.</p>
+                    <p class="game-stats">Niðurstaða: Rockets 108 - Magic 101</p>
+                </div>
             </div>
         </div>
     </section>
