--- a/index_en.html
+++ b/index_en.html
@@ -17,6 +17,8 @@
                 <li><a href="#rules" class="nav-link">Rules</a></li>
                 <li><a href="#teams" class="nav-link">Teams</a></li>
                 <li><a href="#legends" class="nav-link">Legends</a></li>
+                <li><a href="#awards" class="nav-link">Awards</a></li>
+                <li><a href="#games" class="nav-link">Games</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <a href="index.html" class="lang-switch" title="Íslenska">🇮🇸 IS</a>
@@ -208,6 +210,80 @@
                     <p class="team-description">4x NBA Champion - Most Dominant Center Ever</p>
                     </div>
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Awards Section -->
+    <section id="awards" class="awards">
+        <div class="container">
+            <h2>🏆 Top Individual Awards in Basketball</h2>
+            <div class="awards-grid">
+                <div class="award-card">
+                    <div class="award-icon">🎖️</div>
+                    <h3>NBA MVP</h3>
+                    <p class="award-category">Most Valuable Player</p>
+                    <p class="award-description">The award for the best player in the NBA each year. The most prestigious individual award in basketball.</p>
+                    <p class="award-holders">Recipients: Michael Jordan, Wilt Chamberlain, LeBron James</p>
+                </div>
+                <div class="award-card">
+                    <div class="award-icon">🛡️</div>
+                    <h3>Defensive Player of the Year</h3>
+                    <p class="award-category">DPOY</p>
+                    <p class="award-description">The award for the best defensive player of the year. A prestigious honor for elite defenders.</p>
+                    <p class="award-holders">Recipients: Dikembe Mutombo, Dennis Rodman, Kawhi Leonard</p>
+                </div>
+                <div class="award-card">
+                    <div class="award-icon">⭐</div>
+                    <h3>All-NBA Team</h3>
+                    <p class="award-category">First, Second, Third Team</p>
+                    <p class="award-description">The award for the 15 best players in the NBA each year. Divided into three tiers based on performance.</p>
+                    <p class="award-holders">Selected by media and experts</p>
+                </div>
+                <div class="award-card">
+                    <div class="award-icon">🌟</div>
+                    <h3>NBA Finals MVP</h3>
+                    <p class="award-category">Championship MVP</p>
+                    <p class="award-description">The award for the best player in the NBA Finals. One of the greatest personal accolades in basketball.</p>
+                    <p class="award-holders">Recipients: Michael Jordan, LeBron James, Kobe Bryant</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Famous Games Section -->
+    <section id="games" class="famous-games">
+        <div class="container">
+            <h2>🎬 Most Famous Games in Basketball History</h2>
+            <div class="games-grid">
+                <div class="game-card">
+                    <div class="game-date">June 14, 1998</div>
+                    <h3>NBA Finals Game 6 - Chicago Bulls vs Utah Jazz</h3>
+                    <p class="game-context">Michael Jordan's Final Shot</p>
+                    <p class="game-description">Historic game where Michael Jordan hit the game-winning shot with seconds left, securing the Bulls' 6th NBA championship. "The Shot" - one of basketball's most iconic moments.</p>
+                    <p class="game-stats">Final: Bulls 87 - Jazz 86</p>
+                </div>
+                <div class="game-card">
+                    <div class="game-date">June 19, 2016</div>
+                    <h3>NBA Finals Game 7 - Golden State Warriors vs Cleveland Cavaliers</h3>
+                    <p class="game-context">LeBron James' Historic Comeback</p>
+                    <p class="game-description">Incredible game where the Warriors held a 3-1 lead but the Cavaliers came back to win Cleveland's first championship. LeBron James put on an unforgettable performance.</p>
+                    <p class="game-stats">Final: Cavaliers 93 - Warriors 89</p>
+                </div>
+                <div class="game-card">
+                    <div class="game-date">June 20, 2013</div>
+                    <h3>NBA Finals Game 6 - Miami Heat vs San Antonio Spurs</h3>
+                    <p class="game-context">Ray Allen's Three-Pointer</p>
+                    <p class="game-description">Ray Allen hit a clutch 3-pointer with 5 seconds left to force overtime and extended the series. The Heat won the championship and made four consecutive Finals.</p>
+                    <p class="game-stats">Final: Heat 103 - Spurs 100 (OT)</p>
+                </div>
+                <div class="game-card">
+                    <div class="game-date">June 20, 1995</div>
+                    <h3>NBA Finals Game 6 - Houston Rockets vs Orlando Magic</h3>
+                    <p class="game-context">Hakeem's Dominant Performance</p>
+                    <p class="game-description">Hakeem Olajuwon displayed incredible play with 25 points, 10 rebounds, and 3 blocks. The Rockets won their second consecutive championship.</p>
+                    <p class="game-stats">Final: Rockets 108 - Magic 101</p>
+                </div>
             </div>
         </div>
     </section>
