--- a/index.html
+++ b/index.html
@@ -220,32 +220,28 @@
             <h2>🏆 Efstu einstakar verðlaun</h2>
             <div class="awards-grid">
                 <div class="award-card">
-                    <img src="images/award-mvp.svg" alt="NBA MVP" class="award-image">
-                    <div class="award-icon">🎖️</div>
+                    <img src="images/award-mvp.png" alt="NBA MVP" class="award-image">
                     <h3>NBA MVP</h3>
                     <p class="award-category">Most Valuable Player</p>
                     <p class="award-description">Verðlaunin fyrir besta leikmann NBA deildarinnar á hverju ári. Mikilvægasti einstaki verðlaunin í körfubolti.</p>
                     <p class="award-holders">Handfararar: Michael Jordan, Wilt Chamberlain, LeBron James</p>
                 </div>
                 <div class="award-card">
-                    <img src="images/award-dpoy.svg" alt="DPOY" class="award-image">
-                    <div class="award-icon">🛡️</div>
+                    <img src="images/award-dpoy.png" alt="DPOY" class="award-image">
                     <h3>Defensive Player of the Year</h3>
                     <p class="award-category">DPOY</p>
                     <p class="award-description">Verðlaunin fyrir leikmanninn með bestu varnarleiki á árinu. Dýrðleg verðlaunin fyrir þá sem tilheyra bestu vörnum.</p>
                     <p class="award-holders">Handfararar: Dikembe Mutombo, Dennis Rodman, Kawhi Leonard</p>
                 </div>
                 <div class="award-card">
-                    <img src="images/award-allnba.svg" alt="All-NBA Team" class="award-image">
-                    <div class="award-icon">⭐</div>
+                    <img src="images/award-allnba.png" alt="All-NBA Team" class="award-image">
                     <h3>All-NBA Team</h3>
                     <p class="award-category">First, Second, Third Team</p>
                     <p class="award-description">Verðlaunin fyrir 15 bestu leikmenn NBA á ári. Skipt í þrjú þrep miðað við afköst.</p>
                     <p class="award-holders">Valdið af blaðamönnum og sérfræðingum</p>
                 </div>
                 <div class="award-card">
-                    <img src="images/award-finalsmvp.svg" alt="NBA Finals MVP" class="award-image">
-                    <div class="award-icon">🌟</div>
+                    <img src="images/award-finals.png" alt="NBA Finals MVP" class="award-image">
                     <h3>NBA Finals MVP</h3>
                     <p class="award-category">Championship MVP</p>
                     <p class="award-description">Verðlaunin fyrir besta leikmann í NBA-úrslitum. Ein stærstu persónulegu verðlaunin í körfubolti.</p>
@@ -261,7 +257,7 @@
             <h2>🎬 Frægstu leikir körfuboltasögunnar</h2>
             <div class="games-grid">
                 <div class="game-card">
-                    <img src="images/game-jordan.svg" alt="1998 Finals" class="game-image">
+                    <img src="images/game-finals-1.jpg" alt="1998 Finals" class="game-image">
                     <div class="game-date">1998. júní 14</div>
                     <h3>NBA Finals Game 6 - Chicago Bulls vs Utah Jazz</h3>
                     <p class="game-context">Michael Jordan's Final Shot</p>
@@ -269,7 +265,7 @@
                     <p class="game-stats">Niðurstaða: Bulls 87 - Jazz 86</p>
                 </div>
                 <div class="game-card">
-                    <img src="images/game-lebron.svg" alt="2016 Finals" class="game-image">
+                    <img src="images/game-finals-2.jpg" alt="2016 Finals" class="game-image">
                     <div class="game-date">2016. júní 19</div>
                     <h3>NBA Finals Game 7 - Golden State Warriors vs Cleveland Cavaliers</h3>
                     <p class="game-context">LeBron James' Historic Comeback</p>
@@ -277,7 +273,7 @@
                     <p class="game-stats">Niðurstaða: Cavaliers 93 - Warriors 89</p>
                 </div>
                 <div class="game-card">
-                    <img src="images/game-rayallen.svg" alt="2013 Finals" class="game-image">
+                    <img src="images/game-finals-3.jpg" alt="2013 Finals" class="game-image">
                     <div class="game-date">2013. júní 20</div>
                     <h3>NBA Finals Game 6 - Miami Heat vs San Antonio Spurs</h3>
                     <p class="game-context">Ray Allen's Three-Pointer</p>
@@ -285,7 +281,7 @@
                     <p class="game-stats">Niðurstaða: Heat 103 - Spurs 100 (Overtime)</p>
                 </div>
                 <div class="game-card">
-                    <img src="images/game-hakeem.svg" alt="1995 Finals" class="game-image">
+                    <img src="images/game-finals-4.jpg" alt="1995 Finals" class="game-image">
                     <div class="game-date">1995. júní 20</div>
                     <h3>NBA Finals Game 6 - Houston Rockets vs Orlando Magic</h3>
                     <p class="game-context">Hakeem's Dominant Performance</p>
