--- a/index_en.html
+++ b/index_en.html
@@ -220,32 +220,28 @@
             <h2>🏆 Top Individual Awards in Basketball</h2>
             <div class="awards-grid">
                 <div class="award-card">
-                    <img src="images/award-mvp.svg" alt="NBA MVP" class="award-image">
-                    <div class="award-icon">🎖️</div>
+                    <img src="images/award-mvp.png" alt="NBA MVP" class="award-image">
                     <h3>NBA MVP</h3>
                     <p class="award-category">Most Valuable Player</p>
                     <p class="award-description">The award for the best player in the NBA each year. The most prestigious individual award in basketball.</p>
                     <p class="award-holders">Recipients: Michael Jordan, Wilt Chamberlain, LeBron James</p>
                 </div>
                 <div class="award-card">
-                    <img src="images/award-dpoy.svg" alt="DPOY" class="award-image">
-                    <div class="award-icon">🛡️</div>
+                    <img src="images/award-dpoy.png" alt="DPOY" class="award-image">
                     <h3>Defensive Player of the Year</h3>
                     <p class="award-category">DPOY</p>
                     <p class="award-description">The award for the best defensive player of the year. A prestigious honor for elite defenders.</p>
                     <p class="award-holders">Recipients: Dikembe Mutombo, Dennis Rodman, Kawhi Leonard</p>
                 </div>
                 <div class="award-card">
-                    <img src="images/award-allnba.svg" alt="All-NBA Team" class="award-image">
-                    <div class="award-icon">⭐</div>
+                    <img src="images/award-allnba.png" alt="All-NBA Team" class="award-image">
                     <h3>All-NBA Team</h3>
                     <p class="award-category">First, Second, Third Team</p>
                     <p class="award-description">The award for the 15 best players in the NBA each year. Divided into three tiers based on performance.</p>
                     <p class="award-holders">Selected by media and experts</p>
                 </div>
                 <div class="award-card">
-                    <img src="images/award-finalsmvp.svg" alt="NBA Finals MVP" class="award-image">
-                    <div class="award-icon">🌟</div>
+                    <img src="images/award-finals.png" alt="NBA Finals MVP" class="award-image">
                     <h3>NBA Finals MVP</h3>
                     <p class="award-category">Championship MVP</p>
                     <p class="award-description">The award for the best player in the NBA Finals. One of the greatest personal accolades in basketball.</p>
@@ -261,7 +257,7 @@
             <h2>🎬 Most Famous Games in Basketball History</h2>
             <div class="games-grid">
                 <div class="game-card">
-                    <img src="images/game-jordan.svg" alt="1998 Finals" class="game-image">
+                    <img src="images/game-finals-1.jpg" alt="1998 Finals" class="game-image">
                     <div class="game-date">June 14, 1998</div>
                     <h3>NBA Finals Game 6 - Chicago Bulls vs Utah Jazz</h3>
                     <p class="game-context">Michael Jordan's Final Shot</p>
@@ -269,7 +265,7 @@
                     <p class="game-stats">Final: Bulls 87 - Jazz 86</p>
                 </div>
                 <div class="game-card">
-                    <img src="images/game-lebron.svg" alt="2016 Finals" class="game-image">
+                    <img src="images/game-finals-2.jpg" alt="2016 Finals" class="game-image">
                     <div class="game-date">June 19, 2016</div>
                     <h3>NBA Finals Game 7 - Golden State Warriors vs Cleveland Cavaliers</h3>
                     <p class="game-context">LeBron James' Historic Comeback</p>
@@ -277,7 +273,7 @@
                     <p class="game-stats">Final: Cavaliers 93 - Warriors 89</p>
                 </div>
                 <div class="game-card">
-                    <img src="images/game-rayallen.svg" alt="2013 Finals" class="game-image">
+                    <img src="images/game-finals-3.jpg" alt="2013 Finals" class="game-image">
                     <div class="game-date">June 20, 2013</div>
                     <h3>NBA Finals Game 6 - Miami Heat vs San Antonio Spurs</h3>
                     <p class="game-context">Ray Allen's Three-Pointer</p>
@@ -285,7 +281,7 @@
                     <p class="game-stats">Final: Heat 103 - Spurs 100 (OT)</p>
                 </div>
                 <div class="game-card">
-                    <img src="images/game-hakeem.svg" alt="1995 Finals" class="game-image">
+                    <img src="images/game-finals-4.jpg" alt="1995 Finals" class="game-image">
                     <div class="game-date">June 20, 1995</div>
                     <h3>NBA Finals Game 6 - Houston Rockets vs Orlando Magic</h3>
                     <p class="game-context">Hakeem's Dominant Performance</p>
