Remove real games section, keep only video games and awards

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#teams" class="nav-link">Lið</a></li>
                 <li><a href="#legends" class="nav-link">Goðsagnir</a></li>
                 <li><a href="#awards" class="nav-link">Verðlaun</a></li>
-                <li><a href="#games" class="nav-link">Leikirm</a></li>
+                <li><a href="#videogames" class="nav-link">Tölvuleikir</a></li>
                 <li><a href="#contact" class="nav-link">Samband</a></li>
             </ul>
             <a href="index_en.html" class="lang-switch" title="English">🇬🇧 EN</a>
@@ -252,41 +252,34 @@
     </section>
 
     <!-- Famous Games Section -->
-    <section id="games" class="famous-games">
+    <!-- Video Games Section -->
+    <section id="videogames" class="video-games">
         <div class="container">
-            <h2>🎬 Frægstu leikir körfuboltasögunnar</h2>
+            <h2>🎮 Vinsælustu körfubolti tölvuleikir</h2>
             <div class="games-grid">
                 <div class="game-card">
-                    <img src="images/game-finals-1.jpg" alt="1998 Finals" class="game-image">
-                    <div class="game-date">1998. júní 14</div>
-                    <h3>NBA Finals Game 6 - Chicago Bulls vs Utah Jazz</h3>
-                    <p class="game-context">Michael Jordan's Final Shot</p>
-                    <p class="game-description">Sagnfræðilegur leikur þar sem Michael Jordan skoraði sigurmarksið á síðustu sekúndum og tryggði 6. NBA-meistaratitil Chicago Bulls. "The Shot" - ein frægasta stund körfuboltasögunnar.</p>
-                    <p class="game-stats">Niðurstaða: Bulls 87 - Jazz 86</p>
+                    <img src="images/video-nba2k.jpg" alt="NBA 2K" class="game-image">
+                    <h3>NBA 2K Series</h3>
+                    <p class="game-context">Þekktastur körfubolti tölvuleikur</p>
+                    <p class="game-description">NBA 2K er framar 20 árum búið að dominera körfubolti tölvuleikjum. Með raunverulegum leikmönnum, liðum og staðnum geturðu stofnað þinn eigin leikmanna og keppt gegn öðrum aðilum um heiminn.</p>
                 </div>
                 <div class="game-card">
-                    <img src="images/game-finals-2.jpg" alt="2016 Finals" class="game-image">
-                    <div class="game-date">2016. júní 19</div>
-                    <h3>NBA Finals Game 7 - Golden State Warriors vs Cleveland Cavaliers</h3>
-                    <p class="game-context">LeBron James' Historic Comeback</p>
-                    <p class="game-description">Ótrúlegur leikur þar sem Warriors voru með 3-1 stigaforskot en Cavaliers komu til baka og unnu fyrsta meistaratitilinn fyrir Cleveland. LeBron James fór út úr sér með frábærum leikum.</p>
-                    <p class="game-stats">Niðurstaða: Cavaliers 93 - Warriors 89</p>
+                    <img src="images/video-nbalive.jpg" alt="NBA Live" class="game-image">
+                    <h3>NBA Live Series</h3>
+                    <p class="game-context">Klassísk gamlun úr EA Sports</p>
+                    <p class="game-description">NBA Live var ein af fyrstu og bestu körfubolti leikjum á markaði. Þótt framleiðsla hafi stöðvast hefur leikurinn eftir sem áður minni marga um gullna 90s og 2000s.</p>
                 </div>
                 <div class="game-card">
-                    <img src="images/game-finals-3.jpg" alt="2013 Finals" class="game-image">
-                    <div class="game-date">2013. júní 20</div>
-                    <h3>NBA Finals Game 6 - Miami Heat vs San Antonio Spurs</h3>
-                    <p class="game-context">Ray Allen's Three-Pointer</p>
-                    <p class="game-description">Gegn öllu erinni skipti Ray Allen um þá stelpu með 3-stig með 5 sekúndum eftir og framlengi leikins. Miami Heat unnu meistaratitilinn og voru ódrepnir í Sex markamönnum.</p>
-                    <p class="game-stats">Niðurstaða: Heat 103 - Spurs 100 (Overtime)</p>
+                    <img src="images/video-nbahoops.jpg" alt="NBA Hoops" class="game-image">
+                    <h3>NBA Hoops Series</h3>
+                    <p class="game-context">Hefðarlegir körfubolti leikir</p>
+                    <p class="game-description">NBA Hoops seríur var einstaklega vinsæl á Super Nintendo og Genesis tölvum. Þeir buðu upp á skemmtilegan, hraðan körfubolti fyrir alla leikara.</p>
                 </div>
                 <div class="game-card">
-                    <img src="images/game-finals-4.jpg" alt="1995 Finals" class="game-image">
-                    <div class="game-date">1995. júní 20</div>
-                    <h3>NBA Finals Game 6 - Houston Rockets vs Orlando Magic</h3>
-                    <p class="game-context">Hakeem's Dominant Performance</p>
-                    <p class="game-description">Hakeem Olajuwon sýndi ótrúlegan leik með 25 stígum, 10 háetum og 3 blökkunum. Houston Rockets unnu sínum öðrum meistaratitli í röð.</p>
-                    <p class="game-stats">Niðurstaða: Rockets 108 - Magic 101</p>
+                    <img src="images/video-esports.jpg" alt="Basketball Esports" class="game-image">
+                    <h3>NBA Esports Titles</h3>
+                    <p class="game-context">Nútíma stafræn leikir</p>
+                    <p class="game-description">Nú eru margir körfubolti tölvuleikir nýtir til að keppa í esports keppnum. Leikmenn keppa fyrir mikla dólara og fagnaðarverðlaun alls staðar um heiminn.</p>
                 </div>
             </div>
         </div>
