--- a/index_en.html
+++ b/index_en.html
@@ -18,7 +18,7 @@
                 <li><a href="#teams" class="nav-link">Teams</a></li>
                 <li><a href="#legends" class="nav-link">Legends</a></li>
                 <li><a href="#awards" class="nav-link">Awards</a></li>
-                <li><a href="#games" class="nav-link">Games</a></li>
+                <li><a href="#videogames" class="nav-link">Video Games</a></li>
                 <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <a href="index.html" class="lang-switch" title="Íslenska">🇮🇸 IS</a>
@@ -252,41 +252,34 @@
     </section>
 
     <!-- Famous Games Section -->
-    <section id="games" class="famous-games">
+    <!-- Video Games Section -->
+    <section id="videogames" class="video-games">
         <div class="container">
-            <h2>🎬 Most Famous Games in Basketball History</h2>
+            <h2>🎮 Most Popular Basketball Video Games</h2>
             <div class="games-grid">
                 <div class="game-card">
-                    <img src="images/game-finals-1.jpg" alt="1998 Finals" class="game-image">
-                    <div class="game-date">June 14, 1998</div>
-                    <h3>NBA Finals Game 6 - Chicago Bulls vs Utah Jazz</h3>
-                    <p class="game-context">Michael Jordan's Final Shot</p>
-                    <p class="game-description">Historic game where Michael Jordan hit the game-winning shot with seconds left, securing the Bulls' 6th NBA championship. "The Shot" - one of basketball's most iconic moments.</p>
-                    <p class="game-stats">Final: Bulls 87 - Jazz 86</p>
+                    <img src="images/video-nba2k.jpg" alt="NBA 2K" class="game-image">
+                    <h3>NBA 2K Series</h3>
+                    <p class="game-context">The Most Popular Basketball Game</p>
+                    <p class="game-description">NBA 2K has dominated basketball video games for over 20 years. With real players, teams, and venues, you can create your own player and compete against others around the world in MyPlayer mode.</p>
                 </div>
                 <div class="game-card">
-                    <img src="images/game-finals-2.jpg" alt="2016 Finals" class="game-image">
-                    <div class="game-date">June 19, 2016</div>
-                    <h3>NBA Finals Game 7 - Golden State Warriors vs Cleveland Cavaliers</h3>
-                    <p class="game-context">LeBron James' Historic Comeback</p>
-                    <p class="game-description">Incredible game where the Warriors held a 3-1 lead but the Cavaliers came back to win Cleveland's first championship. LeBron James put on an unforgettable performance.</p>
-                    <p class="game-stats">Final: Cavaliers 93 - Warriors 89</p>
+                    <img src="images/video-nbalive.jpg" alt="NBA Live" class="game-image">
+                    <h3>NBA Live Series</h3>
+                    <p class="game-context">Classic Gaming from EA Sports</p>
+                    <p class="game-description">NBA Live was one of the first and best basketball games on the market. While production has stopped, the game still reminds many of the golden 90s and 2000s era of gaming.</p>
                 </div>
                 <div class="game-card">
-                    <img src="images/game-finals-3.jpg" alt="2013 Finals" class="game-image">
-                    <div class="game-date">June 20, 2013</div>
-                    <h3>NBA Finals Game 6 - Miami Heat vs San Antonio Spurs</h3>
-                    <p class="game-context">Ray Allen's Three-Pointer</p>
-                    <p class="game-description">Ray Allen hit a clutch 3-pointer with 5 seconds left to force overtime and extended the series. The Heat won the championship and made four consecutive Finals.</p>
-                    <p class="game-stats">Final: Heat 103 - Spurs 100 (OT)</p>
+                    <img src="images/video-nbahoops.jpg" alt="NBA Hoops" class="game-image">
+                    <h3>NBA Hoops Series</h3>
+                    <p class="game-context">Classic Basketball Arcade Games</p>
+                    <p class="game-description">NBA Hoops series was incredibly popular on Super Nintendo and Genesis consoles. They offered fun, fast-paced basketball gameplay for players of all skill levels.</p>
                 </div>
                 <div class="game-card">
-                    <img src="images/game-finals-4.jpg" alt="1995 Finals" class="game-image">
-                    <div class="game-date">June 20, 1995</div>
-                    <h3>NBA Finals Game 6 - Houston Rockets vs Orlando Magic</h3>
-                    <p class="game-context">Hakeem's Dominant Performance</p>
-                    <p class="game-description">Hakeem Olajuwon displayed incredible play with 25 points, 10 rebounds, and 3 blocks. The Rockets won their second consecutive championship.</p>
-                    <p class="game-stats">Final: Rockets 108 - Magic 101</p>
+                    <img src="images/video-esports.jpg" alt="Basketball Esports" class="game-image">
+                    <h3>NBA Esports Titles</h3>
+                    <p class="game-context">Modern Digital Gaming</p>
+                    <p class="game-description">Today, many basketball video games are used for competitive esports tournaments. Players compete for big money prizes and sponsorships around the world.</p>
                 </div>
             </div>
         </div>
