--- a/index.html
+++ b/index.html
@@ -220,33 +220,27 @@
             <h2>🏆 Efstu einstakar verðlaun</h2>
             <div class="awards-grid">
                 <div class="award-card">
-                    <img src="images/award-mvp.png" alt="NBA MVP" class="award-image">
+                    <img src="images/mvp-trophy.png" alt="NBA MVP" class="award-image">
                     <h3>NBA MVP</h3>
                     <p class="award-category">Most Valuable Player</p>
                     <p class="award-description">Verðlaunin fyrir besta leikmann NBA deildarinnar á hverju ári. Mikilvægasti einstaki verðlaunin í körfubolti.</p>
                     <p class="award-holders">Handfararar: Michael Jordan, Wilt Chamberlain, LeBron James</p>
                 </div>
                 <div class="award-card">
-                    <img src="images/award-dpoy.png" alt="DPOY" class="award-image">
+                    <img src="images/dpoy-trophy.png" alt="DPOY" class="award-image">
                     <h3>Defensive Player of the Year</h3>
                     <p class="award-category">DPOY</p>
                     <p class="award-description">Verðlaunin fyrir leikmanninn með bestu varnarleiki á árinu. Dýrðleg verðlaunin fyrir þá sem tilheyra bestu vörnum.</p>
                     <p class="award-holders">Handfararar: Dikembe Mutombo, Dennis Rodman, Kawhi Leonard</p>
                 </div>
                 <div class="award-card">
-                    <img src="images/award-allnba.png" alt="All-NBA Team" class="award-image">
+                    <img src="images/allnba.webp" alt="All-NBA Team" class="award-image">
                     <h3>All-NBA Team</h3>
                     <p class="award-category">First, Second, Third Team</p>
                     <p class="award-description">Verðlaunin fyrir 15 bestu leikmenn NBA á ári. Skipt í þrjú þrep miðað við afköst.</p>
                     <p class="award-holders">Valdið af blaðamönnum og sérfræðingum</p>
                 </div>
-                <div class="award-card">
-                    <img src="images/award-finals.png" alt="NBA Finals MVP" class="award-image">
-                    <h3>NBA Finals MVP</h3>
-                    <p class="award-category">Championship MVP</p>
-                    <p class="award-description">Verðlaunin fyrir besta leikmann í NBA-úrslitum. Ein stærstu persónulegu verðlaunin í körfubolti.</p>
-                    <p class="award-holders">Handfararar: Michael Jordan, LeBron James, Kobe Bryant</p>
-                </div>
+
             </div>
         </div>
     </section>
@@ -275,12 +269,7 @@
                     <p class="game-context">Hefðarlegir körfubolti leikir</p>
                     <p class="game-description">NBA Hoops seríur var einstaklega vinsæl á Super Nintendo og Genesis tölvum. Þeir buðu upp á skemmtilegan, hraðan körfubolti fyrir alla leikara.</p>
                 </div>
-                <div class="game-card">
-                    <img src="images/video-esports.jpg" alt="Basketball Esports" class="game-image">
-                    <h3>NBA Esports Titles</h3>
-                    <p class="game-context">Nútíma stafræn leikir</p>
-                    <p class="game-description">Nú eru margir körfubolti tölvuleikir nýtir til að keppa í esports keppnum. Leikmenn keppa fyrir mikla dólara og fagnaðarverðlaun alls staðar um heiminn.</p>
-                </div>
+
             </div>
         </div>
     </section>
