--- a/index_en.html
+++ b/index_en.html
@@ -220,33 +220,27 @@
             <h2>🏆 Top Individual Awards in Basketball</h2>
             <div class="awards-grid">
                 <div class="award-card">
-                    <img src="images/award-mvp.png" alt="NBA MVP" class="award-image">
+                    <img src="images/mvp-trophy.png" alt="NBA MVP" class="award-image">
                     <h3>NBA MVP</h3>
                     <p class="award-category">Most Valuable Player</p>
                     <p class="award-description">The award for the best player in the NBA each year. The most prestigious individual award in basketball.</p>
                     <p class="award-holders">Recipients: Michael Jordan, Wilt Chamberlain, LeBron James</p>
                 </div>
                 <div class="award-card">
-                    <img src="images/award-dpoy.png" alt="DPOY" class="award-image">
+                    <img src="images/dpoy-trophy.png" alt="DPOY" class="award-image">
                     <h3>Defensive Player of the Year</h3>
                     <p class="award-category">DPOY</p>
                     <p class="award-description">The award for the best defensive player of the year. A prestigious honor for elite defenders.</p>
                     <p class="award-holders">Recipients: Dikembe Mutombo, Dennis Rodman, Kawhi Leonard</p>
                 </div>
                 <div class="award-card">
-                    <img src="images/award-allnba.png" alt="All-NBA Team" class="award-image">
+                    <img src="images/allnba.webp" alt="All-NBA Team" class="award-image">
                     <h3>All-NBA Team</h3>
                     <p class="award-category">First, Second, Third Team</p>
                     <p class="award-description">The award for the 15 best players in the NBA each year. Divided into three tiers based on performance.</p>
                     <p class="award-holders">Selected by media and experts</p>
                 </div>
-                <div class="award-card">
-                    <img src="images/award-finals.png" alt="NBA Finals MVP" class="award-image">
-                    <h3>NBA Finals MVP</h3>
-                    <p class="award-category">Championship MVP</p>
-                    <p class="award-description">The award for the best player in the NBA Finals. One of the greatest personal accolades in basketball.</p>
-                    <p class="award-holders">Recipients: Michael Jordan, LeBron James, Kobe Bryant</p>
-                </div>
+
             </div>
         </div>
     </section>
@@ -275,12 +269,7 @@
                     <p class="game-context">Classic Basketball Arcade Games</p>
                     <p class="game-description">NBA Hoops series was incredibly popular on Super Nintendo and Genesis consoles. They offered fun, fast-paced basketball gameplay for players of all skill levels.</p>
                 </div>
-                <div class="game-card">
-                    <img src="images/video-esports.jpg" alt="Basketball Esports" class="game-image">
-                    <h3>NBA Esports Titles</h3>
-                    <p class="game-context">Modern Digital Gaming</p>
-                    <p class="game-description">Today, many basketball video games are used for competitive esports tournaments. Players compete for big money prizes and sponsorships around the world.</p>
-                </div>
+
             </div>
         </div>
     </section>
